--- a/index.html
+++ b/index.html
@@ -1,90 +1,58 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-  <meta charset="utf-8">
-  <title>Aaron's Personal Page</title>
-</head>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <div class="rowElement elementHeading alignCenter colorTwo">
+  <h3 class="redesign">Welcome to the Chicago Curling Club</h3>
+  <p>Founded in 1948, the Chicago Curling Club welcomes all visiters and members. Our facility has four sheets of ice, locker rooms, a fully-equipped kitchen, dining area, and a large social and viewing area. As with all sports, it&#39;s the players that make the game, and the members of the Chicago Curling Club have created a warm and welcoming place where you can enjoy a competitive sport and make and expand friendships. Scroll around the site and reach out to us to try it out. You&#39;ll be hooked just like we are.</p>
+  </div>
+  <div class="rowElement threeSections elementPictureTopics alignLeft">
+  <div class="pictureTopicWrapper">
+  <img alt="" src="/data/127/images/HomePage/homepage-1.jpg" class="personPicture" />
+  </div>
+  <div class="pictureTopicWrapper">
+  <img alt="" src="/data/127/images/HomePage/homepage-2.jpg" class="personPicture" />
+  </div>
+  <div class="pictureTopicWrapper">
+  <img alt="" src="/data/127/images/HomePage/homepage-3.jpg" class="personPicture" />
+  </div>
+  <div class="pictureTopicWrapper">
+  <img alt="" src="/data/127/images/HomePage/homepage-4.jpg" class="personPicture" />
+  </div>
+  <div class="pictureTopicWrapper">
+  <img alt="" src="/data/127/images/HomePage/homepage-5.jpg" class="personPicture" />
+  </div>
+  <div class="pictureTopicWrapper">
+  <img alt="" src="/data/127/images/HomePage/homepage-6.jpg" class="personPicture" />
+  </div>
+  </div>
+  <div class="rowElement elementTwoTopics colorFour">
+  <div class="twoTopicItem">
+  <h3 class="redesign">Interested in curling?</h3>
+  <p> Curling is an amazing sport! We'd love to share our passion with you. We offer a few ways to experince curling. The best way is to try one of our Learn 2 Curl programs. No prior experience is required. If you are looking for a great sport that combines friendly competition and fun times with others, curling is for you.&nbsp;</p>
+  <p><a class="redesign buttonLight" href="/customPage.php/learn-to-curl">Tell me more!</a></p>
+  </div>
+  <div class="twoTopicItem">
+  <h3 class="redesign">Looking for a bonspiel?</h3>
+  <p>Bonspiels are a great way to see other clubs and socialize with new curlers. Our public bonspiels, available to all curlers, include the Windy City Open, Men's International, Heathers Gloamin' Gaels, The Old Boys, and the biennial Mixed Bonspiel. We also hold several events for our members, including the year-ending Auld Lange Syne. Our club also hosts and participates in regional MCA social bonspiels and playdown competitions.</p>
+  <p><a class="redesign buttonLight" href="/tournamentPage.php?club=164">Show me more!</a></p>
+  </div>
+  </div>
 
-<body>
-  <table>
-    <tr>
-      <td>  <img src="images/circle-cropped.png" alt="horse pic"></td>
-      <td><h1>Aaron Basil</h1>
-      Director of development at <strong><a href="http://www.ethervision.net">Ethervision</a></strong></td>
-    </tr>
-  </table>
 
-
-<br><br>
-  HTML is for Structure <br>
-  CSS is for Styling <br>
-  JavaScript is for Behavior
-  <br>
-  <p><em>Founder of the World</em></p>
-  <p>This is a block of text talking about who I am</p>
-  <hr>
-  <h3>Skills</h3>
-  <table border="1">
-    <tr>
-      <td>Flutter</td>
-        <td>⭐⭐⭐</td>
-        <td>Reading</td>
-          <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Swift</td>
-        <td>⭐⭐⭐⭐</td>
-        <td>Golf</td>
-          <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>HTML</td>
-        <td>⭐⭐</td>
-    </tr>
-  </table>
-<hr>
-  <ul>
-    <li>this is a test </li>
-    <ul>
-      <li>subitem</li>
-    </ul>
-    <li>2</li>
-    <li>3</li>
-  </ul>
-  <h3>My Hobbies can be seen <a href="hobbies.html">HERE</a></h3>
-  <br>
-  <h3><a href="contact.html">My Contact Details</a></h3>
-  <br>
-  <hr>
-  <table>
-    <thead>
-      <tr>
-        <strong>
-          <th colspan="2">Work Experience</th>
-        </strong>
-      </tr>
-      <tr>
-
-          <th><em>Date</em></th>
-         <th>Position</th>
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2010 - 2011</td>
-        <td>lead dev at idev2.com</td>
-      </tr>
-
-      <tr>
-        <td>2011 - 2020</td>
-        <td>Director of development at Ethervision.net</td>
-
-      </tr>
-    </tbody>
-  </table>
-
-</body>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
 </html>
